add packages + nx setup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "docker.dockerPath": "podman",
-  "docker.composeCommand": "podman-compose"
+  "docker.composeCommand": "podman-compose",
+  "eslint.validate": ["json"]
 }
