ensure that builds are bundled, add cjs shims for require, __filename, __dirname, add rewrite import.meta.resolve to require.resolve

--- a/tools/bundle/project.json
+++ b/tools/bundle/project.json
@@ -9,10 +9,14 @@
         "command": "bun run src/esbuild.ts"
       },
       "inputs": [
-        "{projectRoot}/src"
+        "standard",
+        "^standard"
       ],
       "outputs": [
-        "{projectRoot}/dist"
+        "{projectRoot}/dist/**"
+      ],
+      "dependsOn": [
+        "^build"
       ],
       "cache": true
     },
