--- a/tools/bundle/package.json
+++ b/tools/bundle/package.json
@@ -12,8 +12,7 @@
     "./bundle": "./src/esbuild.ts"
   },
   "dependencies": {
-    "esbuild": "0.24.0",
-    "@external-manifest/tools-bundle": "workspace:*"
+    "esbuild": "0.24.0"
   },
   "devDependencies": {
     "@external-manifest/typescript-config": "workspace:*"
