--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "./package.json": "./package.json"
   },
   "workspaces": [
-    "packages/*",
-    "tools/*"
+    "packages/**",
+    "tools/**"
   ],
   "devDependencies": {
     "@external-manifest/tools-bundle": "workspace:*",
     "@external-manifest/tools-nx-build": "workspace:*",
     "@external-manifest/typescript-config": "workspace:*",
+    "@external-manifest/workspace-tools": "workspace:*",
     "@nx/plugin": "20.0.12",
     "@swc/cli": "0.5.0",
     "@swc/core": "1.9.2",
