--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,14 +11,13 @@ permissions:
   contents: read
 
 jobs:
-  master:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      
-      
+
       - uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
